--- a/unit_1/spring.html
+++ b/unit_1/spring.html
@@ -6,112 +6,122 @@
 	</head>
 	<body id="spring-main">
 	<h1>Spring</h1>	
-		
-		<section>
+		<section class="icons">
 			<h2>Omizutory</h2>
+			<h3>(March 1-14)</h3>
 			<img src="photos/omizutori.jpg">
 			<p>Omizutori is the commonly used name for Shunie, a series of events held annually from March 1 to 14 at Todaiji Temple. This collection of Buddhist repentance rituals has been held every year for over 1250 years, making it one of the oldest reoccurring Buddhist events in Japan.</p>
 			<ul>
-				<li><a href="http://www.japan-guide.com/e/e4110.html">Omizutori in Japan (March 1-14)</a></li>
+				<li><a href="http://www.japan-guide.com/e/e4110.html">Read More</a></li>
 			</ul>
 		</section>
-		<section>
-			<h2>Paris Fashion Week</h2>	
-				<img src="photos/.jpg">
-				<p>FIND</p>
+		<section class="icons">
+			<h2>Fashion Week</h2>	
+			<h3>(Paris, March 4-11)</h3>
+				<img src="photos/parisfashion.png">
+				<p>Paris Fasion Week has arrived for a stylish eight days in Facion Month celebrating design in the City of Lights. It's time for Parisian designers to show what they've got in store for us for the upcoming Fall/Winter style season.</p>
 				<ul>
-					<li><a href="..."> Paris Fashion Week (March 4-11)</a></li>
+					<li><a href="http://parisfashionweek.buzz/">Read More</a></li>
 				</ul>
 		</section>	
-		<section>
+		<section class="icons">
 			<h2>Holi Colour Festival</h2>	
-				<img src="photos/.jpg">
-				<p>FIND</p>
+			<h3>(India, March 6)</h3>
+				<img src="photos/holione.jpg">
+				<p>Thousands of people, dressed in white, come together to share in music, dance, performance art and visual stimulation. Holi One brings this unforgettable experience to cities all around the world.</p>
 				<ul>
-					<li><a href="..."> Holi Colour Festival – India (March 6)</a></li>
+					<li><a href="http://www.holione.com/en/home.html">Read More</a></li>
 				</ul>
 		</section>
-		<section>
-			<h2>SXSW Music Festival</h2>	
-				<img src="photos/.jpg">
-				<p>FIND</p>
+		<section class="icons">
+			<h2>SXSW Music Festival</h2>
+			<h3>Texas (March 9-12)</h3>
+				<img src="photos/sxsw.jpg">
+				<p>The South by Southwest Conferences & Festivals offer the unique convergence of original music, independent films, and emerging technologies. Fostering creative and professional growth alike, SXSW is the premier destination for discovery.</p>
 				<ul>
-					<li><a href="..."> SXSW Music Festival – Texas (March 9-12)</a></li>
+					<li><a href="http://www.sxsw.com/about"> Read More</a></li>
 				</ul>
 		</section>
-		<section>
+		<section class="icons">
 			<h2>F1 Grand Prix</h2>	
-				<img src="photos/.jpg">
-				<p>FIND</p>
+			<h3>Melbourne, Australia (March 15)</h3>
+				<img src="photos/granprix.jpg">
+				<p>The Grand Prix is the oldest surviving motor racing competition held in Australia having been held 79 times since it was first run at Phillip Island in 1928.</p>
 				<ul>
-					<li><a href="..."> F1 Grand Prix - Melbourne, Australia (March 15)</a></li>
+					<li><a href="http://www.grandprix.com.au/">Read More</a></li>
 				</ul>
 		</section>
-		<section>
-			<h2>St Patrick’s Day - Ireland</h2>	
-				<img src="photos/.jpg">
-				<p>FIND</p>
+		<section class="icons">
+			<h2>St Patrick^s Day</h2>	
+			<h3>Ireland (March 17) </h3>
+				<img src="photos/patrick.jpg">
+				<p>This holiday is celebrated every year on March 17th, honoring the Irish patron saint, St. Patrick. The celebrations are largely Irish culture themed and typically consist of wearing green, parades, and drinking.</p>
 				<ul>
-					<li><a href="..."> St Patrick’s Day - Ireland (March 17)</a></li>
+					<li><a href="http://wilstar.com/holidays/patrick.htm#sthash.pDurq3v5.dpuf"> Read More </a></li>
 				</ul>
 		</section>
-		<section>
+		<section class="icons">
 			<h2>Winter Music Conference</h2>	
-				<img src="photos/.jpg">
-				<p>FIND</p>
+			<h3>Miami Beach (March 24-28)</h3>
+				<img src="photos/wmc.jpg">
+				<p>Established in 1985, WMC is the largest longstanding EDM and dance music industry gathering of its kind in the world. As one of the most publicized annual events in the industry, WMC generates over a billion unique viewer media impressions each year.</p>
 				<ul>
-					<li><a href="..."> Winter Music Conference - Miami Beach USA (March 24-28)</a></li>
+					<li><a href="http://wintermusicconference.com/"> Read More </a></li>
 				</ul>
 		</section>
-		<section>
+		<section class="icons">
 			<h2>Melbourne International Comedy Festival</h2>	
-				<img src="photos/.jpg">
-				<p>FIND</p>
+			<h3>Australia (March 25 - April 19)</h3>
+				<img src="photos/comedy.jpg">
+				<p>The Melbourne International Comedy Festival will celebrate its 30th year in 2016 and is one of the three largest comedy festivals in the world, alongside Edinburgh Festival Fringe and Montreal's Just for Laughs Festival.</p>
 				<ul>
-					<li><a href="..."> Melbourne International Comedy Festival - Australia (March 25 - April 19)</a></li>
+					<li><a href="http://www.comedyfestival.com.au/2015/season/">Read More</a></li>
 				</ul>
 		</section>
-		<section>
+		<section class="icons">
 			<h2>What's going on in April?</h2>
 			<img src="photos/amsterdam.jpg">
 			<p>You've heard April showers bring May flowers, but don’t let that halt your travel plans this month. Take a look at our list of not-to-miss events and destinations that are perfect for a fun spring getaway in April.</p>
 			<ul>
-				<li><a href="http://www.travelchannel.com/interests/travel-tips/articles/where-to-travel-in-april/">April arround the world</a></li>
+				<li><a href="http://www.travelchannel.com/interests/travel-tips/articles/where-to-travel-in-april/">Read More</a></li>
 			</ul>
 		</section>
-		<section>
-			<h2>April Fool’s Day</h2>	
-				<img src="photos/.jpg">
-				<p>FIND</p>
+		<section class="icons">
+			<h2>April Fool^s Day</h2>	
+			<h3>(April 1)</h3>
+				<img src="photos/aprilfool.png">
+				<p>Although the day has been celebrated for several centuries by different cultures, its exact origins remain a mystery. Many say that April Fools’ Day dates back to 1582, when France switched from the Julian calendar to the Gregorian calendar.</p>
 				<ul>
-					<li><a href="..."> April Fool’s Day (April 1)</a></li>
+					<li><a href="http://www.history.com/this-day-in-history/april-fools-tradition-popularized"> Read More </a></li>
 				</ul>
 		</section>
-		<section>
+		<section class="icons">
 			<h2>Good Friday</h2>	
-				<img src="photos/.jpg">
-				<p>FIND</p>
+			<h3>USA (April 3)</h3>
+				<img src="photos/goodfriday.jpg">
+				<p>Good Friday occurs two days before Easter Sunday in the United States. It is the day when Christians commemorate Jesus Christ's crucifixion, which plays an important part in the Christian faith.</p>
 				<ul>
-					<li><a href="..."> Good Friday (April 3)</a></li>
+					<li><a href="http://www.timeanddate.com/holidays/us/good-friday"> Read More </a></li>
 				</ul>
 		</section>
-		<section>
+		<section class="icons">
 			<h2>Easter Sunday</h2>	
-				<img src="photos/.jpg">
+			<h3>USA (April 5)
+				<img src="photos/eastersunday.jpeg">
 				<p>FIND</p>
 				<ul>
-					<li><a href="..."> Easter Sunday (April 5)</a></li>
+					<li><a href="http://www.timeanddate.com/holidays/us/easter-sunday"> Read More </a></li>
 				</ul>
 		</section>
-		<section>
+		<section class="icons">
 			<h2>Coachella Valley Music Festival</h2>	
-				<img src="photos/.jpg">
+				<img src="photos/coachella.jpg">
 				<p>FIND</p>
 				<ul>
 					<li><a href="..."> Coachella Valley Music Festival - USA (April 10-19)</a></li>
 				</ul>
 		</section>
-		<section>
+		<section class="icons">
 			<h2>National Cherry Blossom Festival</h2>
 			<img src="photos/cherryblossom.jpg">
 			<p>A cherry blossom is the flower of any of several trees of genus Prunus, particularly the Japanese Cherry, Prunus serrulata, which is called Sakura after the Japanese.</p>
@@ -119,7 +129,7 @@
 				<li><a href="http://www.nationalcherryblossomfestival.org/about/bloom-watch/">National Cherry Blossom Festival in Japan (April 11-14)</a></li>
 			</ul>
 		</section>
-		<section>
+		<section class="icons">
 			<h2>Songkran</h2>	
 				<img src="photos/.jpg">
 				<p>FIND</p>
@@ -127,7 +137,7 @@
 					<li><a href="...">Thai New Year (Songkran) – Thailand (April 13-15)</a></li>
 				</ul>
 		</section>
-		<section>
+		<section class="icons">
 			<h2>ANZAC Day</h2>	
 				<img src="photos/.jpg">
 				<p>FIND</p>
@@ -135,7 +145,7 @@
 					<li><a href="...">ANZAC Day – Australia, New Zealand, Turkey (April 25)</a></li>
 				</ul>
 		</section>
-		<section>
+		<section class="icons">
 			<h2>King's Day</h2>	
 				<img src="photos/.jpg">
 				<p>FIND</p>
@@ -143,7 +153,7 @@
 					<li><a href="...">King's Day - Amsterdam, The Netherlands (April 27)</a></li>
 				</ul>
 		</section>
-		<section>
+		<section class="icons">
 			<h2>May Day</h2>	
 				<img src="photos/.jpg">
 				<p>FIND</p>
@@ -151,7 +161,7 @@
 					<li><a href="...">May Day – (westernised countries in the northern hemisphere) (May 1)</a></li>
 				</ul>
 		</section>
-		<section>
+		<section class="icons">
 			<h2>Bank Holiday</h2>	
 				<img src="photos/.jpg">
 				<p>FIND</p>
@@ -159,7 +169,7 @@
 					<li><a href="...">Bank Holiday - UK (May 4)</a></li>
 				</ul>
 		</section>
-		<section>
+		<section class="icons">
 			<h2>Cinco de Mayo</h2>	
 				<img src="photos/.jpg">
 				<p>FIND</p>
@@ -167,7 +177,7 @@
 					<li><a href="...">Cinco de Mayo - Mexico (May 5)</a></li>
 				</ul>
 		</section>
-		<section>
+		<section class="icons">
 			<h2>Prague Spring International Music Festival</h2>	
 				<img src="photos/.jpg">
 				<p>FIND</p>
@@ -175,7 +185,7 @@
 					<li><a href="...">Prague Spring International Music Festival - Czech Republic (May 9-31)</a></li>
 				</ul>
 		</section>
-		<section>
+		<section class="icons">
 			<h2>Cannes Film Festival</h2>	
 				<img src="photos/.jpg">
 				<p>FIND</p>
@@ -183,7 +193,7 @@
 					<li><a href="...">Cannes Film Festival - France (May 13-24)</a></li>
 				</ul>
 		</section>
-		<section>
+		<section class="icons">
 			<h2>Vivid Festival</h2>	
 				<img src="photos/.jpg">
 				<p>FIND</p>
@@ -191,7 +201,7 @@
 					<li><a href="...">Cinco de Mayo - Mexico (May 22 - June 8)</a></li>
 				</ul>
 		</section>
-		<section>
+		<section class="icons">
 			<h2>Bath International Music Festival</h2>	
 				<img src="photos/.jpg">
 				<p>FIND</p>
@@ -199,7 +209,7 @@
 					<li><a href="...">Bath International Music Festival – England (May 23 - June 8)</a></li>
 				</ul>
 		</section>
-		<section>
+		<section class="icons">
 			<h2>Monaco F1 Grand Prix</h2>	
 				<img src="photos/.jpg">
 				<p>FIND</p>
@@ -207,7 +217,7 @@
 					<li><a href="..."> Monaco F1 Grand Prix – Monaco (May 24)</a></li>
 				</ul>
 		</section>
-		<section>
+		<section class="icons">
 			<h2>Roland Garros French Open</h2>	
 				<img src="photos/.jpg">
 				<p>FIND</p>
@@ -215,7 +225,7 @@
 					<li><a href="...">Roland Garros French Open - Paris, France (May 24 - June 7)</a></li>
 				</ul>
 		</section>
-		<section>
+		<section class="icons">
 			<h2>Memorial Day</h2>	
 				<img src="photos/.jpg">
 				<p>FIND</p>
@@ -223,7 +233,7 @@
 					<li><a href="...">Memorial Day - USA (May 25)</a></li>
 				</ul>
 		</section>
-		<section>
+		<section class="icons">
 			<h2>AfricaBurn</h2>
 			<img src="photos/africaburn.jpg">
 			<p>Since its founding in 2007 on a private farm called Stonehenge next to the Tankwa Karoo National Park far away from civilization (about 250 miles outside Cape Town) in the Northern Cape Province of South Africa. Like at Burning Man, you better be pretty intentional in your desire to make this trek. Given that the event is during the southern hemisphere’s early fall, there are so many similarities to Burning Man, you may feel like you’re hallucinating. In fact, the event is held over South Africa’s version of Labor Day, May Day. And, given the nature of the event, that may be true depending upon your predilections.</p>
@@ -231,5 +241,5 @@
 				<li><a href="https://www.fest300.com/festivals/afrikaburn/">Africa Burn!</a></li>
 			</ul>
 		</section>
-</body>
+	</body>
 </html>
