--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -10,16 +10,20 @@
 			<ul>
 				<li><img id="we" src="photos/we.png"></li>
 				<li>Share</li>
-				<li>Search</li>
+				<li><input type="text" placeholder="Places, Dates, or Countries" name="text">
+				</li>
 				<li>Sign in</li>
 				<li>Sign Up</li>
 			</ul>
 		</nav>
 	</header>
 		<section id="intro">
-				<img id="logo" src="photos/logo.png" alt="Events arround the world"><h1>All that interests you around the world</h1>
+				<img id="logo" src="photos/logo.png" alt="Events arround the world">
+				<h1>All that interests you around the world</h1>
 				<p> Share with us art exhibitions, sport events, places of interest, festivals and any other events that happen all over the world</p>
+		<hr>
 		</section>
+
 		<section id="container" class="clearfix">
 			<section class="column">
 				<h3>Follow us</h3>
