--- a/unit_1/spring.html
+++ b/unit_1/spring.html
@@ -108,17 +108,18 @@
 			<h2>Easter Sunday</h2>	
 			<h3>USA (April 5)
 				<img src="photos/eastersunday.jpeg">
-				<p>FIND</p>
+				<p>Many churches hold special services on Easter Sunday, which celebrate the Jesus Christ's resurrection after his crucifixion. Many people also decorate eggs. It is also common to organize Easter egg hunts. Eggs of some form are hidden, supposedly by a rabbit or hare.</p>
 				<ul>
 					<li><a href="http://www.timeanddate.com/holidays/us/easter-sunday"> Read More </a></li>
 				</ul>
 		</section>
 		<section class="icons">
 			<h2>Coachella Valley Music Festival</h2>	
+			<h3>USA (April 10-19)</h3>
 				<img src="photos/coachella.jpg">
 				<p>FIND</p>
 				<ul>
-					<li><a href="..."> Coachella Valley Music Festival - USA (April 10-19)</a></li>
+					<li><a href="..."> Read More</a></li>
 				</ul>
 		</section>
 		<section class="icons">
