--- a/unit_1/spring.html
+++ b/unit_1/spring.html
@@ -19,7 +19,8 @@
 			<h2>Fashion Week</h2>	
 			<h3>(Paris, March 4-11)</h3>
 				<img src="photos/parisfashion.png">
-				<p>Paris Fasion Week has arrived for a stylish eight days in Facion Month celebrating design in the City of Lights. It's time for Parisian designers to show what they've got in store for us for the upcoming Fall/Winter style season.</p>
+				<p>Paris Fasion Week has arrived for a stylish eight days in Facion Month celebrating design in the City of Lights. 
+				</p>
 				<ul>
 					<li><a href="http://parisfashionweek.buzz/">Read More</a></li>
 				</ul>
@@ -52,7 +53,7 @@
 				</ul>
 		</section>
 		<section class="icons">
-			<h2>St Patrick^s Day</h2>	
+			<h2>St Patrick ' s Day</h2>	
 			<h3>Ireland (March 17) </h3>
 				<img src="photos/patrick.jpg">
 				<p>This holiday is celebrated every year on March 17th, honoring the Irish patron saint, St. Patrick. The celebrations are largely Irish culture themed and typically consist of wearing green, parades, and drinking.</p>
@@ -61,19 +62,19 @@
 				</ul>
 		</section>
 		<section class="icons">
-			<h2>Winter Music Conference</h2>	
+			<h2>Music Conference</h2>	
 			<h3>Miami Beach (March 24-28)</h3>
 				<img src="photos/wmc.jpg">
-				<p>Established in 1985, WMC is the largest longstanding EDM and dance music industry gathering of its kind in the world. As one of the most publicized annual events in the industry, WMC generates over a billion unique viewer media impressions each year.</p>
+				<p>Established in 1985, WMC is the largest longstanding EDM and dance music industry gathering of its kind in the world. WMC generates over a billion unique viewer media impressions each year.</p>
 				<ul>
 					<li><a href="http://wintermusicconference.com/"> Read More </a></li>
 				</ul>
 		</section>
 		<section class="icons">
-			<h2>Melbourne International Comedy Festival</h2>	
-			<h3>Australia (March 25 - April 19)</h3>
+			<h2> International Comedy Festival</h2>
+			<h3>Melbourne, Au (March 25 - April 19)</h3>
 				<img src="photos/comedy.jpg">
-				<p>The Melbourne International Comedy Festival will celebrate its 30th year in 2016 and is one of the three largest comedy festivals in the world, alongside Edinburgh Festival Fringe and Montreal's Just for Laughs Festival.</p>
+				<p>The Melbourne International Comedy Festival celebrates its 30th year in 2016 and is one of the 3 largest comedy festivals in the world, alongside with Edinburgh Festival Fringe and Montreal's Just for Laughs Festival.</p>
 				<ul>
 					<li><a href="http://www.comedyfestival.com.au/2015/season/">Read More</a></li>
 				</ul>
@@ -87,7 +88,7 @@
 			</ul>
 		</section>
 		<section class="icons">
-			<h2>April Fool^s Day</h2>	
+			<h2>April Fool's Day</h2>	
 			<h3>(April 1)</h3>
 				<img src="photos/aprilfool.png">
 				<p>Although the day has been celebrated for several centuries by different cultures, its exact origins remain a mystery. Many say that April Fools’ Day dates back to 1582, when France switched from the Julian calendar to the Gregorian calendar.</p>
