--- a/unit_1/summer.html
+++ b/unit_1/summer.html
@@ -6,84 +6,95 @@
 	</head>
 	<body id="summer-main">
 	<h1>Summer</h1>	
-		<section>
-			<h2>CBanff World Television Festival</h2>	
-			<img src="photos/.jpg">
-			<p>FIND</p>
+		<section class="icons3">
+			<h2>Banff World Television Festival</h2>
+			<h3>Canada (June 7-10)</h3>
+			<img src="photos/banff.jpg">
+			<p>For 36 years, the Banff World Media Festival has brought top leaders from across the evolving media landscape to the heart of the Canadian Rockies for a totally unique experience. The Festival began as an intimate space where unparalleled access and cutting-edge insight could combine to forge relationships, launch new business and aid the ambitious members of a dynamic industry in reaching their goals.</p>
 			<ul>
-				<li><a href="...">Banff World Television Festival - Canada (June 7-10)</a></li>
+				<li><a href="http://banffmediafestival.com/about-banff/">Read More</a></li>
 			</ul>
 		</section>
-		<section>
+		<section class="icons3">
 			<h2>Isle of Wight Festival</h2>	
-			<img src="photos/.jpg">
-			<p>FIND</p>
+			<h3>UK (June 11-14)</h3>
+			<img src="photos/isleofwight.jpg">
+			<p>Starting the summer in style, the award winning Isle of Wight Festival takes place in June every year in the town of Newport and is steeped in history and recognised around the world for its line-up, mixing legendary artists with the hottest up and coming acts.
+			The Festival is famed for its heritage and as the UK’s first major music event of the summer; it gives festival goers a line up to love.</p>
 			<ul>
-				<li><a href="...">Isle of Wight Festival - UK (June 11-14)</a></li>
+				<li><a href="http://www.isleofwightfestival.com/">Read More</a></li>
 			</ul>
 		</section>
-		<section>
+		<section class="icons3">
 			<h2>Glastonbury Festival</h2>	
-			<img src="photos/.jpg">
-			<p>FIND</p>
+			<h3>UK (June 24-28)</h3>
+			<img src="photos/glastonbury.jpg">
+			<p>Glastonbury Festival is the largest greenfield music and performing arts festival in the world and a template for all the festivals that have come after it. The difference is that Glastonbury has all the best aspects of being at a festival in one astonishing bundle.</p>
 			<ul>
-				<li><a href="...">Glastonbury Festival – UK (June 24-28)</a></li>
+				<li><a href="http://www.glastonburyfestivals.co.uk/history/">Read More</a></li>
+			</ul>
+		</section>
+		<section class="icons3">
+			<h2>Wimbledon</h2>
+			<h3>London,UK (Jun,29-Jul,12)</h3>
+			<img src="photos/wimbledon.jpg">
+			<p>The Championships, Wimbledon, commonly known as "Wimbledon", is the oldest tennis tournament in the world, and is widely considered the most prestigious.[2][3][4][5][6] It has been held at the All England Club in Wimbledon, London since 1877. It is one of the four Grand Slam tennis tournaments, the others being the Australian Open, the French Open and the US Open. Since the Australian Open shifted to hardcourt in 1988, Wimbledon is the only major still played on grass.</p>
+			<ul>
+				<li><a href="http://www.wimbledon.com/index.html"> Read More </a></li>
+			</ul>
+		</section>
+		<section class="icons3">
+			<h2>Canada Day</h2>
+			<h3>Canada (July 1)</h3>
+			<img src="photos/canadaday.jpg">
+			<p>Happy Canada Day! On July 1, 1867, the nation was officially born when the Constitution Act joined three provinces into one country: Nova Scotia, New Brunswick, and the Canada province, which then split into Ontario and Quebec. However, Canada was not completely independent of England until 1982. </p>
+			<ul>
+				<li><a href="http://mentalfloss.com/article/31069/what-exactly-canada-day">Read More</a></li>
 			</ul>
 		</section>
 		<section>
-			<h2>Wimbledon</h2>	
-			<img src="photos/.jpg">
-			<p>FIND</p>
+			<h2>Roskilde Festival</h2>
+			<h3>Copenhagen, Denmark (July 1-4)</h3>
+			<img src="photos/roskilde.jpg">
+			<p>Roskilde Festival is the largest North European culture and music festival and has existed since 1971. The purpose of the society is to support initiatives benefitting children and young people and to support humanitarian and cultural work. The society's work is independent of party politics and has no geographical borders.</p>
 			<ul>
-				<li><a href="...">Wimbledon - London, UK (June 29 - July 12)</a></li>
+				<li><a href="http://www.roskilde-festival.dk/">Read More</a></li>
 			</ul>
 		</section>
-		<section>
-			<h2>Canada Day</h2>	
-			<img src="photos/.jpg">
-			<p>FIND</p>
+		<section class="icons3">
+			<h2>Independence Day</h2>
+			<h3>USA (July 4)</h3>
+			<img src="photos/independence.jpg">
+			<p>Independence Day is annually celebrated on July 4 and is often known as "the Fourth of July". It is the anniversary of the publication of the declaration of independence from Great Britain in 1776. Patriotic displays and family events are organized throughout the United States.</p>
 			<ul>
-				<li><a href="...">Canada Day (July 1)</a></li>
+				<li><a href="http://www.timeanddate.com/holidays/us/independence-day">Read More</a></li>
+			</ul>
+		</section class="icons3">
+		<section>
+			<h2>Wireless Music Festival</h2>
+			<h3>England (July 3-5)</h3>
+			<img src="photos/wireless.jpg">
+			<p>The Wireless Festival is a music festival in England that takes place every year in London, and took place at Harewood House, Leeds in 2006 and 2007. It is owned and managed by Live Nation. The first festival took place in June 2005 and was in Hyde Park only. Tickets were £35 a day.</p>
+			<ul>
+				<li><a href="http://www.wirelessfestival.co.uk/">Read More</a></li>
 			</ul>
 		</section>
-		<section>
-			<h2>Roskilde Festival</h2>	
-			<img src="photos/.jpg">
-			<p>FIND</p>
+		<section class="icons3">
+			<h2>Calgary Stampede</h2>
+			<h3>Canada (July 3-12)</h3>
+			<img src="photos/calgary.jpg">
+			<p>The Calgary Stampede is a not-for-profit community organization that preserves and celebrate our western heritage, cultures and community spirit. The Stampede contributes to the quality of life by promoting volunteerism, presenting a year-round slate of events, investing in youth and agricultural programs, and developing a unique western experience for the world to enjoy.</p>
 			<ul>
-				<li><a href="...">Roskilde Festival – Copenhagen, Denmark (July 1-4)</a></li>
+				<li><a href="http://www.calgarystampede.com/">Read More</a></li>
 			</ul>
 		</section>
-		<section>
-			<h2>Independence Day</h2>	
-			<img src="photos/.jpg">
-			<p>FIND</p>
-			<ul>
-				<li><a href="...">Independence Day - USA (July 4)</a></li>
-			</ul>
-		</section>
-		<section>
-			<h2>Wireless Music Festival</h2>	
-			<img src="photos/.jpg">
-			<p>FIND</p>
-			<ul>
-				<li><a href="...">Wireless Music Festival - England (July 3-5)</a></li>
-			</ul>
-		</section>
-		<section>
-			<h2>Calgary Stampede</h2>	
-			<img src="photos/.jpg">
-			<p>FIND</p>
-			<ul>
-				<li><a href="...">Calgary Stampede - Canada (July 3-12)</a></li>
-			</ul>
-		</section>
-		<section>
+		<section class="icons3">
 			<h2>Montreux International Jazz Festival</h2>	
-			<img src="photos/.jpg">
+			<h3>Switzerland (July 3-18)</h3>
+			<img src="photos/montreux.jpg">
 			<p>FIND</p>
 			<ul>
-				<li><a href="...">Montreux International Jazz Festival – Switzerland (July 3-18)</a></li>
+				<li><a href="http://www.montreuxjazzfestival.com/fr">Read More</a></li>
 			</ul>
 		</section>
 
