--- a/unit_8/fall.html
+++ b/unit_8/fall.html
@@ -6,7 +6,6 @@
 	</head>
 	<body id="fall-main">
 	<h1>Fall</h1>	
-		</section>
 		<section class="icons2">
 			<h2>Labor Day</h2>
 			<h3>USA (September 7)</h3>	
@@ -29,7 +28,7 @@
 			<h2>Mexican Independence Day</h2>	
 			<h3>Mexico (September 16)</h3>
 			<img src="photos/mexindependence.jpg">
-			<p>Mexico celebrates its independence every September 16 with parades, festivals, feasts, parties and more. Mexican flags are everywhere and the main plaza in Mexico City is packed. </p>
+			<p>Mexico celebrates its independence every September 16 with parades, festivals, feasts, parties and more. Mexican flags are everywhere and the main plaza in Mexico City is packed.<br><br></p>
 			<ul>
 				<li><a href="http://latinamericanhistory.about.com/od/independenceinmexico/p/Mexicos-Independence-Day-September-16.htm"> Read More </a></li>
 		</section>
@@ -71,7 +70,7 @@
 			<h2>Melbourne Cup Day</h2>
 			<h3>Melbourne, Au (November 3)</h3>	
 			<img src="photos/cupday.jpg">
-			<p>Melbourne Cup Day is one of Australia's most popular social and racing events. The main racing event takes place at the Flemington Racecourse in Melbourne, Victoria. More than 100,000 people usually attend Flemington Racecourse. </p>
+			<p>Melbourne Cup Day is one of Australia's most popular social and racing events. The main racing event takes place at the Flemington Racecourse in Melbourne, Victoria. More than 100,000 people usually attend Flemington Racecourse. <br><br></p>
 			<ul>
 				<li><a href="http://www.timeanddate.com/holidays/australia/melbourne-cup-day">Read More</a></li>
 			</ul>
@@ -98,7 +97,7 @@
 			<h2>Festival of Lights (Diwali)</h2>
 			<h3>India (November 11-15)	</h3>
 			<img src="photos/diwali.jpg">
-			<p>The history of Diwali is replete with legends which are moored to the stories of Hindu religious scriptures, mostly the Puranas. The central theme of all legends point out to the classic truth of the victory of the good over the evils.</p>
+			<p>The history of Diwali is replete with legends which are moored to the stories of Hindu religious scriptures, mostly the Puranas. The central theme of all legends point out to the classic truth of the victory of the good over the evils. <br><br></p>
 			<ul>
 				<li><a href="http://www.diwalifestival.org/diwali-in-history.html">Read More</a></li>
 			</ul>
