--- a/unit_8/spring.html
+++ b/unit_8/spring.html
@@ -20,7 +20,7 @@
 			<h3>(Paris, March 4-11)</h3>
 				<img src="photos/parisfashion.png">
 				<p>Paris Fasion Week has arrived for 8 stylish dayscelebrating design in the City of Lights. 
-				</p>
+				<br><br></p>
 				<ul>
 					<li><a href="http://parisfashionweek.buzz/">Read More</a></li>
 				</ul>
@@ -65,7 +65,7 @@
 			<h2>Music Conference</h2>	
 			<h3>Miami (March 24-28)</h3>
 				<img src="photos/wmc.jpg">
-				<p>Established in 1985, WMC is the largest longstanding dance music industry gathering of its kind. As one of the most publicized annual events in the industry, WMC generates over a billion unique viewer media impressions each year.</p>
+				<p>Established in 1985, WMC is the largest longstanding dance music industry gathering of its kind. As one of the most publicized annual events in the industry, WMC generates over a billion unique viewer media impressions each year.<br><br></p>
 				<ul>
 					<li><a href="http://wintermusicconference.com/"> Read More </a></li>
 				</ul>
@@ -74,7 +74,7 @@
 			<h2>International Comedy Festival</h2>
 			<h3>Melbourne (Mar.25 - Apr.19)</h3>
 				<img src="photos/comedy.jpg">
-				<p>The Comedy Festival is known to be one of the three largest comedy festivals in the world, alongside with Edinburgh Festival Fringe and Montreal's Just for Laughs Festival.<br></p>
+				<p>The Comedy Festival is known to be one of the three largest comedy festivals in the world, alongside with Edinburgh Festival Fringe and Montreal's Just for Laughs Festival.<br><br></p>
 				<ul>
 					<li><a href="http://www.comedyfestival.com.au/2015/season/">Read More</a></li>
 				</ul>
@@ -82,7 +82,7 @@
 		<section class="icons">
 			<h2>What's going on in April?</h2>
 			<img src="photos/amsterdam.jpg">
-			<p>April showers bring May flowers. But there is a list of important events perfect for April getaway. Exit Old Man Winter, enter Lady Spring! As our clocks spring forward, the days grow longer, so does the opportunity for outdoor fun.<br><br></p>
+			<p>April showers bring May flowers. But there is a list of important events perfect for April getaway. Exit Old Man Winter, enter Lady Spring! As our clocks spring forward, the days grow longer, so does the opportunity for outdoor fun.<br><br><br></p>
 			<ul>
 				<li><a href="http://www.travelchannel.com/interests/travel-tips/articles/where-to-travel-in-april/">Read More</a></li>
 			</ul>
@@ -145,7 +145,7 @@
 			<h2>ANZAC Day</h2>	
 			<h3>Australia, New Zealand (April 25)</h3>
 				<img src="photos/anzak.jpg">
-				<p>Anzac Day - is one of Australia’s most important national occasions. It marks the anniversary of the major military action fought by Australian and New Zealand forces during the 1st World War and stands for Australian and New Zealand Army Corps. </p>
+				<p>Anzac Day - is one of Australia's most important national occasions. It marks the anniversary of the major military action fought by Australian and New Zealand forces during the 1st World War and stands for Australian and New Zealand Army Corps. </p>
 				<ul>
 					<li><a href="https://www.awm.gov.au/commemoration/anzac/anzac-tradition/">Read More</a></li>
 				</ul>
@@ -154,7 +154,7 @@
 			<h2>King's Day</h2>	
 			<h3>The Netherlands (April 27)</h3>
 				<img src="photos/kingsday.jpg">
-				<p>King’s Day is the biggest national event in Holland. Amsterdam is transformed into the nation’s biggest orange party town. Even the Dutch royal family goes on tour to be received by one or more Dutch towns for en entertainment-filled day.  </p>
+				<p>King's Day is the biggest national event in Holland. Amsterdam is transformed into the nation's biggest orange party town. Even the Dutch royal family goes on tour to be received by one or more Dutch towns for en entertainment-filled day.<br><br> </p>
 				<ul>
 					<li><a href="http://www.holland.com/us/tourism/holland-information/kings-day-us.htm">Read More</a></li>
 				</ul>
@@ -163,7 +163,7 @@
 			<h2>May Day</h2>	
 			<h3>Westernised countries in the northern hemisphere (May 1)</h3>
 				<img src="photos/mayday.jpg">
-				<p>For many people there is an assumption that it is a holiday celebrated in state communist countries like Cuba or the former Soviet Union however May Day has its origins in US and is as "American" as baseball and apple pie.</p>
+				<p>For many people there is an assumption that it is a holiday celebrated in state communist countries like Cuba or the former Soviet Union however May Day has its origins in US and is as "American" as baseball and apple pie.<br><br></p>
 				<ul>
 					<li><a href="http://www.iww.org/history/library/misc/origins_of_mayday">Read More</a></li>
 				</ul>
@@ -191,7 +191,7 @@
 			<h2>International Music Festival</h2>	
 			<h3>Czech Republic (May 9-31)</h3>
 				<img src="photos/prague.jpg">
-				<p>The Prague Spring International Music Festival was born in 1946. It is an annual music festival with the participation of top soloists and orchestras from all over the world.</p>
+				<p>The Prague Spring International Music Festival was born in 1946. It is an annual music festival with the participation of top soloists and orchestras from all over the world.<br><br></p>
 				<ul>
 					<li><a href="http://czech-transport.com/index.php?id=17564">Read More</a></li>
 				</ul>
@@ -237,8 +237,7 @@
 			<h2>Roland Garros French Open</h2>
 			<h3>Paris, France (May 24-June 7)</h3>	
 				<img src="photos/roland.jpg">
-				<p>The French Tennis Federation decided to maintain the tournament at Roland Garros in Paris - its traditional historic venue. This ambitious project will preserve the inimitable character of Roland-Garros.
-				</p>
+				<p>The French Tennis Federation decided to maintain the tournament at Roland Garros in Paris - its traditional historic venue. This ambitious project will preserve the inimitable character of Roland-Garros. <br><br></p>
 				<ul>
 					<li><a href="http://www.rolandgarros.com/en_FR/index.html#lXWpAJ6py1JWpPS7.99"> Read More</a></li>
 				</ul>
@@ -256,7 +255,7 @@
 			<h2>AfricaBurn</h2>
 			<h3>South Africa (Apr,25-May,1)</h3>
 			<img src="photos/africaburn.jpg">
-			<p>Since its founding in 2007 on a private farm called Stonehenge next to the Tankwa Karoo National Park far away from civilization in the Northern Cape Province of South Africa. Like at Burning Man, you better be pretty intentional in your desire to make this trek.</p>
+			<p>Since its founding in 2007 on a private farm called Stonehenge next to the Tankwa Karoo National Park far away from civilization in the Northern Cape Province of South Africa. Like at Burning Man, you better be pretty intentional in your desire to make this trek.<br><br></p>
 			<ul>
 				<li><a href="https://www.fest300.com/festivals/afrikaburn/">Read More</a></li>
 			</ul>
