--- a/unit_8/summer.html
+++ b/unit_8/summer.html
@@ -6,93 +6,104 @@
 	</head>
 	<body id="summer-main">
 	<h1>Summer</h1>	
-		<section>
-			<h2>CBanff World Television Festival</h2>	
-			<img src="photos/.jpg">
-			<p>FIND</p>
-			<ul>
-				<li><a href="...">Banff World Television Festival - Canada (June 7-10)</a></li>
-			</ul>
+		<section class="icons3">
+			<h2>Banff World Television Festival</h2>
+			<h3>Canada (June 7-10)</h3>
+				<img src="photos/banff.jpg">
+				<p>For 36 years, the Banff World Media Festival has brought top leaders from across Canada for a totally unique experience. The Festival began as an intimate space where unparalleled access and cutting-edge insight could combine to forge relationships and launch new business.</p>
+				<ul>
+					<li><a href="http://banffmediafestival.com/about-banff/">Read More</a></li>
+				</ul>
 		</section>
-		<section>
+		<section class="icons3">
 			<h2>Isle of Wight Festival</h2>	
-			<img src="photos/.jpg">
-			<p>FIND</p>
-			<ul>
-				<li><a href="...">Isle of Wight Festival - UK (June 11-14)</a></li>
-			</ul>
+			<h3>UK (June 11-14)</h3>
+				<img src="photos/isleofwight.jpg">
+				<p>The award winning Isle of Wight Festival takes place in June in the town of Newport and is steeped in history and recognised around the world for its line-up, mixing legendary artists and coming acts.</p>
+				<ul>
+					<li><a href="http://www.isleofwightfestival.com/">Read More</a></li>
+				</ul>
 		</section>
-		<section>
+		<section class="icons3">
 			<h2>Glastonbury Festival</h2>	
-			<img src="photos/.jpg">
-			<p>FIND</p>
-			<ul>
-				<li><a href="...">Glastonbury Festival – UK (June 24-28)</a></li>
-			</ul>
+			<h3>UK (June 24-28)</h3>
+				<img src="photos/glastonbury.jpg">
+				<p>Glastonbury Festival is the largest greenfield music and performing arts festival in the world and a template for all the festivals that have come after it. The difference is that Glastonbury has all the best aspects of being at a festival in one astonishing bundle.<br><br></p>
+				<ul>
+					<li><a href="http://www.glastonburyfestivals.co.uk/history/">Read More</a></li>
+				</ul>
 		</section>
-		<section>
-			<h2>Wimbledon</h2>	
-			<img src="photos/.jpg">
-			<p>FIND</p>
-			<ul>
-				<li><a href="...">Wimbledon - London, UK (June 29 - July 12)</a></li>
-			</ul>
+		<section class="icons3">
+			<h2>Wimbledon</h2>
+			<h3>London,UK (Jun,29-Jul,12)</h3>
+				<img src="photos/wimbledon.jpg">
+				<p>The Championships, Wimbledon, is the oldest tennis tournament in the world.It has been held at the All England Club in Wimbledon, London since 1877. It is one of the 4 Grand Slam tennis tournaments: the Australian Open, the French Open and the US Open.<br><br></p>
+				<ul>
+					<li><a href="http://www.wimbledon.com/index.html"> Read More </a></li>
+				</ul>
 		</section>
-		<section>
-			<h2>Canada Day</h2>	
-			<img src="photos/.jpg">
-			<p>FIND</p>
-			<ul>
-				<li><a href="...">Canada Day (July 1)</a></li>
-			</ul>
+		<section class="icons3">
+			<h2>Canada Day</h2>
+			<h3>Canada (July 1)</h3>
+				<img src="photos/canadaday.jpg">
+				<p>Happy Canada Day! On July 1, 1867, the nation was officially born when the Constitution Act joined three provinces into one country: Nova Scotia, New Brunswick, and the Canada province, which then split into Ontario and Quebec.<br><br>  </p>
+				<ul>
+					<li><a href="http://mentalfloss.com/article/31069/what-exactly-canada-day">Read More</a></li>
+				</ul>
 		</section>
-		<section>
-			<h2>Roskilde Festival</h2>	
-			<img src="photos/.jpg">
-			<p>FIND</p>
-			<ul>
-				<li><a href="...">Roskilde Festival – Copenhagen, Denmark (July 1-4)</a></li>
-			</ul>
+		<section class="icons3">
+			<h2>Roskilde Festival</h2>
+			<h3>Copenhagen, Denmark (July 1-4)</h3>
+				<img src="photos/roskilde.jpg">
+				<p>Roskilde Festival is the largest North European culture and music festival and has existed since 1971. The purpose of the society is to support initiatives benefitting children and young people and to support humanitarian and cultural work.<br><br></p>
+				<ul>
+					<li><a href="http://www.roskilde-festival.dk/">Read More</a></li>
+				</ul>
 		</section>
-		<section>
-			<h2>Independence Day</h2>	
-			<img src="photos/.jpg">
-			<p>FIND</p>
-			<ul>
-				<li><a href="...">Independence Day - USA (July 4)</a></li>
-			</ul>
+		<section class="icons3">
+			<h2>Independence Day</h2>
+			<h3>USA (July 4)</h3>
+				<img src="photos/independence.jpg">
+				<p>Independence Day is annually celebrated on July 4. It is the anniversary of the publication of the declaration of independence from Great Britain in 1776.<br><br></p>
+				<ul>
+					<li><a href="http://www.timeanddate.com/holidays/us/independence-day">Read More</a></li>
+				</ul>
+		</section>		
+		<section class="icons3">
+			<h2>Wireless Music Festival</h2>
+			<h3>England (July 3-5)</h3>
+				<img src="photos/wireless.jpg">
+				<p>The Wireless Festival is a music festival in England that takes place every year in London, and took place at Harewood House, Leeds in 2006 and 2007. It is owned and managed by Live Nation. The first festival took place in June 2005 and was in Hyde Park only.</p>
+				<ul>
+					<li><a href="http://www.wirelessfestival.co.uk/">Read More</a></li>
+				</ul>
 		</section>
-		<section>
-			<h2>Wireless Music Festival</h2>	
-			<img src="photos/.jpg">
-			<p>FIND</p>
-			<ul>
-				<li><a href="...">Wireless Music Festival - England (July 3-5)</a></li>
-			</ul>
+		<section class="icons3">
+			<h2>Calgary Stampede</h2>
+			<h3>Canada (July 3-12)</h3>
+				<img src="photos/calgary.jpg">
+				<p>The Calgary Stampede preserves and celebrates western heritage, cultures and community spirit. The Stampede promotes volunteerism, presentsa year-round slate of events, investsin youth and agricultural programs, and develops a unique western experience for the world to enjoy.</p>
+				<ul>
+					<li><a href="http://www.calgarystampede.com/">Read More</a></li>
+				</ul>
 		</section>
-		<section>
-			<h2>Calgary Stampede</h2>	
-			<img src="photos/.jpg">
-			<p>FIND</p>
-			<ul>
-				<li><a href="...">Calgary Stampede - Canada (July 3-12)</a></li>
-			</ul>
+		<section class="icons3">
+			<h2>International Jazz Festival</h2>	
+			<h3>Montreux, Switzerland (July 3-18)</h3>
+				<img src="photos/montreux.jpg">
+				<p>The Montreux Jazz Festival is a music festival in Switzerland, held annually on the Lake Geneva shoreline. It is the second largest annual jazz festival in the world.</p>
+				<ul>
+					<li><a href="http://www.montreuxjazzfestival.com/fr">Read More</a></li>
+				</ul>
 		</section>
-		<section>
-			<h2>Montreux International Jazz Festival</h2>	
-			<img src="photos/.jpg">
-			<p>FIND</p>
-			<ul>
-				<li><a href="...">Montreux International Jazz Festival – Switzerland (July 3-18)</a></li>
-			</ul>
+		<section class="icons3">		
+			<h2>Chinese New Year</h2>
+			<h3>China (Feb, 8)</h3>
+				<img src="photos/chinanewyear.jpg">
+				<p>Spring Festival, widely known as Chinese New Year in the West, is the most important traditional festival, and most important celebration for families in China. It is an official public holiday.<br><br></p>
+				<ul>
+					<li><a href="http://www.chinahighlights.com/travelguide/special-report/chinese-new-year/">Read More</a></li>
+				</ul>
 		</section>
-
-
-	<h2>Chinese New Year</h2>
-		<img src="photos/chinanewyear.jpg">
-		<p>Spring Festival, widely known as Chinese New Year in the West, is the most important traditional festival, and most important celebration for families in China. It is an official public holiday, during which most Chinese have 7 days off work.</p>
-		<ul>
-			<li><a href="http://www.chinahighlights.com/travelguide/special-report/chinese-new-year/">Chinese New Year 2016 - a Monkey Year</a></li>
-		</ul>
 </body>
 </html>
