unit 8 new update

--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -27,7 +27,7 @@
 			<section class="column">
 				<h2>Follow us</h2>
 				<p>There is always room for more! Meet with like minded people and discuss events with your friends on our social media accounts.</p>
-					<h4>follow us</h4>
+					<h4>follow</h4>
 					<a href="https://twitter.com/"><img id="twitter" src="photos/twitter.png" alt="Twitter Icon" /></a>
 					<a href="http://feeds.pinterest.com/"><img id="pinterest" src="photos/pinterest.png" alt="Pinterest Icon"/></a>
 					<a href="http://www.facebook.com/"><img id="fb" src="photos/facebook.png" alt="Facebook Icon"/></a>
@@ -35,15 +35,15 @@
 				</p>
 			</section>
 			<section class="column-center">
-				<h2>Share events with all of us</h2>
+				<h2>Share with us</h2>
 				<p>We created a collection of several significant events. However there is always room for more! Share with us what we missed and we will post it immediately!
-				<h4>share with us</h4>
+				<h4>share</h4>
 				<a href="http:www.asokolova89@gmail.com/"><img id="share" src="photos/share.png" alt="Share Icon"/></a>
 			</section>
 			<section class="column">
-				<h2>Keep track of your events!</h2 >
+				<h2>Save it</h2 >
 				<p>We've made a personal callendar for you. It's now easier to save and keep track of events that matters to you! Safe dates is your phones as well.
-				<h4>save us</h4>
+				<h4>save</h4>
 					<img id="apple" src="photos/apple.png" alt="Apple Icon">
 					<img id="android" src="photos/android.png" alt="Android Icon">
 					<img id="windows" src="photos/windows.png" alt="Windows Icon">
@@ -54,7 +54,7 @@
 		<section id="winter">
 			<div id="one">
 				<h2><a href="winter.html">Winter</a></h2>
-				<p>For many people winter is most commonly assosiated with its biggest holiday - Christmas and New Year. However, we should not forget, that for different countries both date and significants of these holiday may vary. </p>
+				<p>For many people winter is most commonly assosiated with its biggest holiday - Christmas and New Year. However, we should not forget, that for different countries dates of these holiday may vary. </p>
 			</div>
 		</section>
 		<section id="spring">
