--- a/unit_8/winter.html
+++ b/unit_8/winter.html
@@ -239,6 +239,9 @@
 					<li><a href="http://www.travelsupermarket.com/blog/top-10-carnivals-around-world/">Read More</a></li>
 				</ul>
 		</section>
+	<footer>
+		&copy; 2015 World Events by Alexandra
+	</footer>
 </body>
 </html>
 
