--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -7,14 +7,12 @@
 	<body>
 	<header>
 		<nav>		
-			<ul>
-				<li><img id="we" src="photos/we.png"></li>
-				<li>Share</li>
-				<li><input type="text" placeholder="Places, Dates, or Countries" name="text">
-				</li>
-				<li>Sign in</li>
-				<li>Sign Up</li>
-			</ul>
+			<li><img id="we" src="photos/we.png"></li>
+			<li>Share</li>
+			<li><input type="text" placeholder="Places, Dates, Countries" name="text">
+			</li>
+			<li>Sign in</li>
+			<li>Sign Up</li>
 		</nav>
 	</header>
 		<section id="intro">
@@ -26,28 +24,23 @@
 		<section id="container" class="clearfix">
 			<section class="column">
 				<h2>Follow us</h2>
-				<p>There is always room for more! Meet with like minded people and discuss events with your friends on our social media accounts.</p>
-					<h4>follow</h4>
+				<p>There is always room for more! Meet with like minded people and discuss events with your friends on our social media accounts.</p>		
 					<a href="https://twitter.com/"><img id="twitter" src="photos/twitter.png" alt="Twitter Icon" /></a>
 					<a href="http://feeds.pinterest.com/"><img id="pinterest" src="photos/pinterest.png" alt="Pinterest Icon"/></a>
 					<a href="http://www.facebook.com/"><img id="fb" src="photos/facebook.png" alt="Facebook Icon"/></a>
 					<a href="https://instagram.com/"><img id="instagram"src="photos/instagram.png" alt="Instagram Icon"/></a>
-				</p>
 			</section>
 			<section class="column-center">
 				<h2>Share with us</h2>
-				<p>We created a collection of several significant events. However there is always room for more! Share with us what we missed and we will post it immediately!
-				<h4>share</h4>
-				<a href="http:www.asokolova89@gmail.com/"><img id="share" src="photos/share.png" alt="Share Icon"/></a>
+				<p>We created a collection of several significant events. However there is always room for more! Share with us what we missed!</p>
+					<a href="http:www.asokolova89@gmail.com/"><img id="share" src="photos/share.png" alt="Share Icon"/></a>
 			</section>
 			<section class="column">
 				<h2>Save it</h2 >
-				<p>We've made a personal callendar for you. It's now easier to save and keep track of events that matters to you! Safe dates is your phones as well.
-				<h4>save</h4>
+				<p>We've made a personal callendar for you. It's now easy to safe and keep track of events both in your phone and computer! </p>
 					<img id="apple" src="photos/apple.png" alt="Apple Icon">
 					<img id="android" src="photos/android.png" alt="Android Icon">
-					<img id="windows" src="photos/windows.png" alt="Windows Icon">
-				</p>
+					<img id="windows" src="photos/windows.png" alt="Windows Icon">	
 			</section>
 		</section>
 	<section clas="clearfix">	
