--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -2,12 +2,13 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link href='https://fonts.googleapis.com/css?family=Syncopate' rel='stylesheet' type='text/css'>
 		<title> World Events </title>
 	</head>
 	<body>
 	<header>
 		<nav>		
-			<li><img id="we" src="photos/we.png"></li>
+			<li><img id="we" src="photos/we.png" alt="logo letters W.E."></li>
 			<li>Share</li>
 			<li><input type="text" placeholder="Places, Dates, Countries" name="text">
 			</li>
@@ -16,7 +17,7 @@
 		</nav>
 	</header>
 		<section id="intro">
-				<img id="logo" src="photos/logo.png" alt="Events arround the world">
+				<img id="logo" src="photos/logo.png" alt="Events arround the world picture with fireworks">
 				<h1>All that interests you around the world</h1>
 				<p> Share with us art exhibitions, sport events, places of interest, festivals and any other events that happen all over the world</p>
 		<hr>
@@ -70,8 +71,8 @@
 			</div>
 		</section>
 	</section>	
-	<footer>
+		<footer>
 		&copy; 2015 World Events by Alexandra
-	</footer>
-</body>
+		</footer>
+	</body>
 </html>
